fix: character sheet clipping in mobile firefox

--- a/ui/static/css/room.css
+++ b/ui/static/css/room.css
@@ -10,7 +10,7 @@ body {
 
 .room {
   display: flex;
-  height: 100vh;
+  height: 100dvh;
 }
 
 .links-block {
@@ -39,6 +39,7 @@ body {
   flex: 5;
   padding: 0.5rem;
   overflow-y: auto;
+  overflow-x: auto;
   font-size: 15px;
   scrollbar-gutter: stable;
 }
@@ -50,8 +51,8 @@ body {
 
 #right-panel {
   background-color: var(--secondary-bg);
-  flex: 1 1 240px;
-  min-width: 240px;
+  flex: 1 1 0;
+  min-width: 250px;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -209,7 +210,7 @@ body {
 }
 
 .panel {
-  min-height: 93vh;
+  min-height: 93dvh;
 }
 
 /* ===== OVERLAY AND MODALS ===== */
@@ -350,7 +351,7 @@ body {
 .radiotab:checked+.tablabel+.panel.chat {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 40px);
+  height: calc(100dvh - 40px);
   overflow: visible;
 }
 
@@ -580,7 +581,7 @@ body {
   bottom: calc(100% + 0.5rem);
   margin-bottom: 0;
   width: 320px;
-  max-height: calc(100vh - 160px);
+  max-height: calc(100dvh - 160px);
   overflow: auto;
   box-sizing: border-box;
   z-index: 100;
@@ -750,4 +751,12 @@ body {
   display: none;
 }
 
-@media (max-width: 1440px) {}
+@media (max-width: 1440px) {
+  #character-sheet-container {
+    padding: 0.5rem 0;
+  }
+
+  .container {
+    justify-content: flex-start;
+  }
+}
