--- a/ui/static/css/sheet.css
+++ b/ui/static/css/sheet.css
@@ -166,6 +166,7 @@ h3 {
 
 #navigation-tabs {
     width: 1200px;
+    min-width: 1200px;
     max-width: 90vw;
 }
 
@@ -214,9 +215,6 @@ h3 {
 }
 
 .character-sheet-grid {
-    grid-template-rows: auto;
-    grid-template-columns: 2fr 1fr;
-    max-width: 1200px;
     margin: 0 auto;
 }
 
